@@ -6,7 +6,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 
-// хорошая ли проверка ощибок?
 public class CommandParser {
     private String commandName = null;
     private ArrayList<String> commandArgs = new ArrayList<>();
@@ -14,24 +13,20 @@ public class CommandParser {
     public void parse(String line) {
         if (line == null) {
             commandName = null;
-            commandArgs = new ArrayList<>();
+            commandArgs = null;
             return;
         }
 
-//        PUSH 4 # djsfjkfd
-//        останется PUSH 4
         Pattern commentPattern = Pattern.compile("#.*");
         Matcher matcher = commentPattern.matcher(line);
         String command = matcher.replaceAll("");
 
-        // уверен можно проще но пусть работает
         Pattern wordPattern = Pattern.compile("\\s+");
         commandArgs = new ArrayList<>(List.of(wordPattern.split(command)));
 
-        // зачем
         try {
-            commandName = commandArgs.remove(0);
-            if (commandName.equals(""))
+            commandName = commandArgs.removeFirst();
+            if (commandName.isEmpty())
                 commandName = null;
         } catch (IndexOutOfBoundsException ex) {
             commandName = null;
